# pi-gui

./: .gitignore  autoresearch.checks.ps1  autoresearch.checks.sh  autoresearch.jsonl  autoresearch.md  autoresearch.ps1  autoresearch.sh  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
.jules/: bolt.md  sentinel.md
apps/desktop/: .gitignore  README.md  electron-builder.yml  package.json  playwright.config.ts  tsconfig.json
apps/desktop/electron/: app-store-composer.ts  app-store-internals.ts  app-store-persistence.ts  app-store-session-state.ts  app-store-timeline.ts  app-store-utils.ts  app-store-workspace.ts  app-store-worktree.ts  app-store.ts  main.ts  notification-manager.ts  notification-permission.ts  preload.ts
apps/desktop/scripts/: dev.mjs
apps/desktop/src/: App.tsx  composer-panel.tsx  composer-surface.tsx  conversation-timeline.tsx  desktop-state.ts  icons.tsx  ipc.ts  message-markdown.tsx  model-onboarding.ts  model-selector.tsx  new-thread-view.tsx  queued-composer-messages.tsx  settings-general-section.tsx  settings-models-section.tsx  settings-notifications-section.tsx  settings-utils.tsx  settings-view.tsx  sidebar.tsx  timeline-item.tsx  timeline-types.ts
apps/desktop/src/hooks/: use-slash-menu.tsx
apps/desktop/src/styles/: main.css  sidebar.css
apps/desktop/tests/: controls-live.spec.ts  parallel-live.spec.ts  smoke.spec.ts
apps/desktop/tests/core/: composer-controls.spec.ts  mentions-diff.spec.ts  queued-messages.spec.ts  (+4 more)
apps/oh-my-pi/: index.html  package.json  tsconfig.json  vite.config.ts
apps/oh-my-pi/src/: main.tsx  tauri-api.ts
apps/oh-my-pi/src-tauri/: Cargo.toml  tauri.conf.json
apps/oh-my-pi/src-tauri/capabilities/: default.json
apps/oh-my-pi/src-tauri/icons/: README.md
apps/oh-my-pi/src-tauri/src/: main.rs  rpc.rs  sidecar.rs
apps/website/app/: globals.css  page.tsx
(+8 files in other folders)
